le cose da fare stanno su whatsapp, poi faccio la grafica migliorata

--- a/app/src/main/res/layout/item_scheda.xml
+++ b/app/src/main/res/layout/item_scheda.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
-
     android:padding="20dp">
 
 
@@ -23,10 +22,11 @@
     <Button
         android:id="@+id/visualizzaScheda"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="Scheda"
         android:textColor="@color/black"
         android:textSize="18dp"
+        android:padding="10dp"
         android:background="@drawable/drawable_scheda"
         android:onClick="OnSchedaClick"
         android:layout_weight="1"
