--- a/app/src/main/res/layout/misure_dettaglio.xml
+++ b/app/src/main/res/layout/misure_dettaglio.xml
@@ -214,39 +214,30 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     >
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="0.2"
-                        android:layout_height="wrap_content"
-                        ></TextView>
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="1.1"
-                    android:layout_height="wrap_content"
-                    android:text="Petto"
-                    android:textColor="@color/black"
-                    android:textSize="18dp"
-                    android:gravity="left"
-                    ></TextView>
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="0.25"
-                        android:layout_height="wrap_content"
-                        ></TextView>
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="1.2"
-                        android:layout_height="wrap_content"
-                        android:text="Spalle"
-                        android:textColor="@color/black"
-                        android:textSize="18dp"
-                        android:gravity="right"
-                        ></TextView>
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.3"></TextView>
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="Petto"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="18dp"></TextView>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:text="Spalle"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:gravity="center"
+                        android:textColor="@color/black"
+                        android:textSize="18dp"
+                        ></TextView>
+
                 </LinearLayout>
                 <LinearLayout
 
@@ -260,30 +251,23 @@
                         android:id="@+id/petto"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.6"
+                        android:layout_weight="1"
                         android:background="@drawable/drawable_botton_grigio"
                         android:inputType="numberDecimal"
                         android:hint="cm"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
                         android:padding="6dp"
                         android:textAlignment="center">
                     </EditText>
 
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="0.2"
-                        android:layout_height="wrap_content"
-                        ></TextView>
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="0.2"
-                        android:layout_height="wrap_content"
-                        ></TextView>
                     <EditText
                         android:id="@+id/spalle"
                         android:layout_width="0dp"
-                        android:layout_weight="0.6"
+                        android:layout_weight="1"
                         android:padding="6dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
                         android:hint="cm"
                         android:background="@drawable/drawable_botton_grigio"
                         android:textAlignment="center"
