Immagini fatto. Anche ingrandisci foto

--- a/app/src/main/res/layout/item_scheda.xml
+++ b/app/src/main/res/layout/item_scheda.xml
@@ -16,6 +16,7 @@
         android:layout_weight="0.3"
         android:layout_marginRight="20dp"
         android:src="@drawable/noimg"
+        android:onClick="OnImmagineClick"
         >
 
     </ImageView>
